Adjust card text size to prevent clipping. (#999)

--- a/app/styles/pages/home.scss
+++ b/app/styles/pages/home.scss
@@ -57,6 +57,10 @@ h3 a {
   }
 }
 
+.card__sub-title {
+  font-size: 22px;
+}
+
 .photo__people {
   background-image: url(../images/home/cardboard.jpg);
 }
